# Py16Web_HW07

./: README.md  config.ini  my_select.py  pyproject.toml
conf/: db.py  models.py
migration/versions/: f857e44e4c82_init.py
